# wasm-raytracer

./: .gitignore  README.md  index.html  main.css  package-lock.json  package.json  vite.config.ts
rust-wasm-raytracer/: Cargo.toml
rust-wasm-raytracer/src/: camera.rs  geometric_objects.rs  lib.rs  materials.rs  ray.rs  scene.rs  shade_record.rs  world.rs
src/: index.ts
