[package]
name = "rust-wasm-raytracer"
version = "0.1.0"
authors = ["Marko Stevanović <stevanovicmarko@gmail.com>"]
description = "Simple raytracing implementation in rust"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.100"
cgmath = { version = "0.18.0", features = ["swizzle"] }
cascade = "1.0.0"
lazy_static ="1.4.0"
arr_macro = "0.1.3"
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
